--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 				<div class="col-sm-6 ps-5 mb-3" id="content-container">
 					<h1>Online</h1>
-					<h2>Advising</h2>
+					<h2>Pre-Advising</h2>
 					<p>Online Advising does the job for you! No more going to the university and waiting in line.</p>
 					<a href="signin/universal-signin.php" class="btn">Get Started</a>
 					
