--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<ul class="navbar-nav mx-auto me-auto mb-2 "></ul>
 					<ul class=" navbar-nav">
 						<li class=" nav-item ml-auto">
-							<a class="nav-link" href="http://wmsu.edu.ph">WMSU Portal</a>
+							<a class="nav-link" onclick="window.open('http://wmsu.edu.ph','_blank');">WMSU Portal</a>
 						</li>
 					</ul>
 				</div>
