--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<div class="col-sm-6 ps-5 mb-3" id="content-container">
 					<h1>Online</h1>
 					<h2>Advising</h2>
-					<p>Online Advising does the job for you! No more going to the university and waiting in line.</p>
+					<p>Online Advising does the job for you! Saving the subject record of the student.</p>
 					<a href="signin/universal-signin.php" class="btn">Get Started</a>
 					
 				</div>
