--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- Wmsu-Icon -->
         <link rel="icon" href="source/assets/images/wmsulogo.png">
-		<title>Online Pre-Advising</title>
+		<title>Online Pre-Advising 1.0</title>
 		<!-- BOOTSTRAP 5 -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
